--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
         </section>
 
         <section class="resultados">
+           <div>
             <div class="gorjeta-total">
                 <p>
                     <strong>Gorjeta</strong> <br>
                     / pessoa
                 </p>
 
-                <strong>$ 0.00</strong>
+                <strong>R$ 0.00</strong>
             </div>
 
             <div class="total">
@@ -66,8 +67,9 @@
                     / pessoa
                 </p>
 
-                <strong>$ 0.00</strong>
+                <strong>R$0.00</strong>
             </div>
+           </div>
 
             <button>Limpar</button>
         </section>
