--- a/index.html
+++ b/index.html
@@ -40,12 +40,17 @@
                 </div>
 
                 <div class="pessoas">
-                    <label for="pessoas">Quantidade de pessoas</label>
-                    <p id="erro">Não pode ser zero</p>
-                    <div>
+
+                    <div class="textos">
+                        <label for="pessoas">Quantidade de pessoas</label>
+                        <p id="erro">Não pode ser zero</p>
+                    </div>
+
+                    <div class="input-box">
                         <img src="./images/icon-person.svg" alt="icone da pessoa">
                         <input type="number" name="pessoas" id="pessoas" placeholder="0">
                     </div>
+
                 </div>
             </form>
         </section>
@@ -67,7 +72,7 @@
                     / pessoa
                 </p>
 
-                <strong>R$0.00</strong>
+                <strong>R$ 0.00</strong>
             </div>
            </div>
 
